# LatentSlate

./: .gitignore  .impeccable.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs  split_preview.py
.github/ISSUE_TEMPLATE/: bug_report.yml  build_platform_issue.yml  comfyui_workflow_compatibility.yml  feature_request.yml  provider_adapter_request.yml
.github/workflows/: ci.yml
docs/: AGENT_CONTROL_API.md  ARCHITECTURE.md  AUDIO_TIMELINE_PLAN.md  CONTENT_ARCHITECTURE.md  DECODE-STRATEGIES.md  DESKTOP_TEST_HARNESS.md  EGUI-BESTPRACTICES.md  EGUI_UI_UX_REBUILD_PLAN.md  PREVIEW_STATS.md  PROJECT.md  PROVIDERS.md  PROVIDER_BUILDER_SPEC.md  PROVIDER_MANIFEST_SCHEMA.md  PROVIDER_SETUP_GUIDE.md  SLINT_MIGRATION_TODO.md  SLINT_REFACTOR.md
scripts/: automation-scenario.ps1  build-and-stage.ps1  desktop-smoke.ps1  stage-runtime-dlls.ps1
src/: app.rs  constants.rs  editor.rs  egui_app.rs  main.rs  ui_kit.rs
src/core/: automation.rs  comfyui_workflow.rs  credentials.rs  export.rs  ffmpeg_runtime.rs  generation.rs  media.rs  mod.rs  paths.rs  preview_store.rs  provider_store.rs  recycle_bin.rs  thumbnailer.rs  timeline_bridge.rs  video_decode.rs
src/egui_app/: agent_api_panel.rs  asset_lab.rs  asset_panel.rs  attributes_panel.rs  automation_ui.rs  confirmations.rs  export_modal.rs  export_modal_ui.rs  generation_runtime.rs  preview_canvas.rs  preview_runtime.rs  preview_transform.rs  (+8 more)
workflows/: Mock Video Workflow API_manifest.json  SDXL-VANILLA-API.json  SDXL-VANILLA-API_manifest.json  sdxl_simple_example_API_manifest.json
(+38 files in other folders)
