[package]
name = "latentslate"
version = "0.1.0"
edition = "2021"
description = "A local-first generative NLE for ComfyUI and AI video workflows"
license = "MIT"
authors = ["Enviral Design", "LatentSlate Contributors"]

[dependencies]
eframe = { version = "0.34.2", default-features = false, features = ["glow", "default_fonts"] }
egui_extras = "0.34.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"  # Native file dialogs
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2.1.3"
image = "0.25"
imageproc = "0.26"
ab_glyph = "0.2"
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }
bytemuck = { version = "1.15", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
cpal = "0.15"
tokio-tungstenite = "0.23"
futures-util = "0.3"
base64 = "0.22"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_UI_Shell"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Future dependencies:
# tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
